# 2PAQ

./: CMakeLists.txt  README.md
data/: .aq_leader_3_3_clients2.swp  aq_leader_3_10_clients  aq_leader_3_10_clients1  aq_leader_3_10_clients10  aq_leader_3_10_clients2  aq_leader_3_10_clients3  aq_leader_3_10_clients4  aq_leader_3_10_clients5  aq_leader_3_10_clients6  aq_leader_3_10_clients7  aq_leader_3_10_clients8  aq_leader_3_10_clients9  aq_leader_3_1_clients  aq_leader_3_1_clients1  aq_leader_3_2_clients  aq_leader_3_2_clients1  aq_leader_3_2_clients1_2  aq_leader_3_2_clients2  aq_leader_3_2_clients2_2  aq_leader_3_2_clients_2  aq_leader_3_3_clients  aq_leader_3_3_clients1  aq_leader_3_3_clients2  aq_leader_3_3_clients3  aq_leader_3_4_clients  aq_leader_3_4_clients1  aq_leader_3_4_clients2  aq_leader_3_4_clients3  aq_leader_3_4_clients4  aq_leader_3_5_clients  aq_leader_3_5_clients1  aq_leader_3_5_clients2  aq_leader_3_5_clients3  aq_leader_3_5_clients4  aq_leader_3_5_clients5  aq_leader_3_6_clients  aq_leader_3_6_clients1  aq_leader_3_6_clients2  aq_leader_3_6_clients3  aq_leader_3_6_clients4  (+204 more)
data/data/: aq_leader_3_10_client  aq_leader_3_10_clients1  aq_leader_3_10_clients10  aq_leader_3_10_clients2  aq_leader_3_10_clients3  aq_leader_3_10_clients4  aq_leader_3_10_clients5  aq_leader_3_10_clients6  aq_leader_3_10_clients7  aq_leader_3_10_clients8  aq_leader_3_10_clients9  aq_leader_3_1_client  aq_leader_3_1_clients1  aq_leader_3_2_client  (+224 more)
src/: central_2pc.cc  circular_buffer.h  client.cc  hash_table.h  key_value.h  load_balancer.cc  main_2pc.cc  server.cc  server.h  server_2paq.h  server_2pc.h  server_2pc_AQ.h  test_client.cc
